--- a/coleción-de-imágenes/index.html
+++ b/coleción-de-imágenes/index.html
@@ -13,7 +13,7 @@
     <canvas id="loveRain"></canvas>
 
     <h1>
-        <span>POKÉMONS😊</span>
+        <span>POKÉMONS</span>
     </h1>
 
 <!-- contenedor de todas las imagenes-->
